--- a/index.html
+++ b/index.html
@@ -26,9 +26,57 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
     <!--build:css assets/styles/style.min.css -->
-    <link rel="stylesheet" href="./node_modules/material-design-lite/material.css">
-    <link rel="stylesheet" href="assets/styles/style.css">
+    <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.indigo-pink.min.css">
     <!--endbuild-->     
+    <style type="text/css">
+        .app #add {
+            position: absolute;
+            z-index: 999;
+            right: 40px;
+            bottom: -24px;
+        }
+
+        .app-layout {
+            max-width: 960px;
+            margin: 0 auto;
+            padding-top: 24px;
+            width: 100%;
+            flex-shrink: 0;
+            display: block;
+        }
+
+        .app-header {
+            position: relative;
+        }
+
+        .app .news-card {
+            min-height: 168px;
+        }
+
+        .app .mdl-layout__tab-bar {
+            width: 100%;
+            padding: 0 0 0 16px;
+        }
+
+        .app .news_card__details {
+            font-size: 16px;
+        }
+
+        .app .news_card__actions {
+            display: flex;
+        }
+
+        .app .news-card__links {
+            display: flex;
+            margin-top: 16px;
+        }
+
+        .app .news-card__title-link {
+            padding-left: 16px;
+            font-size: 14px;
+            text-decoration: none;
+        }
+    </style>
 
 </head>
 <body class="app mdl-color--grey-100 mdl-color-text--grey-700 mdl-base">
@@ -185,7 +233,7 @@
         </div>
     </div>
     <!--build:js assets/js/bundle.min.js -->
-    <script src="./node_modules/material-design-lite/dist/material.js"></script>
+    <script src="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.min.js"></script>
     <!--endbuild-->
 </body>
 </html>
