--- a/index.html
+++ b/index.html
@@ -24,76 +24,10 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,thin,medium&amp;lang=ru">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.indigo-pink.min.css">
+    <!-- <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.indigo-pink.min.css"> -->
+    <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.blue-pink.min.css">
 
-    <style type="text/css">
-        .app-layout {
-            max-width: 960px;
-            margin: 0 auto;
-            padding-top: 24px;
-            width: 100%;
-            flex-shrink: 0;
-            display: block;
-        }
-        .app-header {
-            position: relative;
-        }
-        .app .news-card {
-            min-height: 168px;
-        }
-        .app .mdl-layout__tab-bar {
-            width: 100%;
-            padding: 0 0 0 16px;
-        }
-        .app .news-card__ts {
-            align-self: flex-start;
-            white-space: nowrap;
-            line-height: 28px;
-        }
-
-        .app .news_card__details {
-            font-size: 16px;
-        }
-        .app .news_card__actions {
-            display: flex;
-        }
-        .app .news-card__links {
-            display: flex;
-            margin-top: 16px;
-        }
-        .app .news-card__title-link {
-            padding: 0 16px;
-            font-size: 14px;
-            text-decoration: none;
-            align-self: flex-start;
-            line-height: 28px;
-        }
-
-        .app .news-card__image {
-            float: right;
-        }
-
-        .app .news-card__content {
-            display: none;;
-            height: 0;
-            transition: height 0.5s;
-        }
-
-        .app .news-card__content--expanded .news-card__content {
-            display: block;
-            height: 100%;
-        }
-
-        .app .news-card__content--expanded .news-card__expand-icon {
-            transform: rotate(180deg);
-        }
-
-
-        .app .news-card .mdl-card__supporting-text {
-            width: 95%;
-        }
-
-    </style>
+    <link rel="stylesheet" "text/css" href="./assets/styles/style.css">
 
 </head>
 <body class="app mdl-color--grey-100 mdl-color-text--grey-700 mdl-base">
@@ -128,126 +62,8 @@
         </div>
     </div>
 
- 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
-    <script src="https://wzrd.in/standalone/superagent@latest"></script>
     <script src="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.min.js"></script>
-    <script src="https://fb.me/react-with-addons-0.14.3.min.js"></script>
-    <script src="https://fb.me/react-dom-0.14.3.min.js"></script>
-
-    <script type="text/babel">    
-        class NewsCard extends React.Component {  
-
-            constructor(props) {
-                super(props);
-                this.state = {
-                    expanded: false
-                }
-            }
-
-            handleExpand(e) {
-                e.preventDefault();               
-                this.setState({expanded: !this.state.expanded});
-            }
-
-            render() {
-                let cardClass = 'news-card mdl-card mdl-cell mdl-cell--12-col mdl-shadow--2dp';
-                if (this.props.news.active) {
-                    cardClass += ' mdl-color--orange-100';
-                }
-
-                return (
-                        <div className={cardClass} id={this.props.news.active ? 'current' : ''}>
-                            <div className="mdl-card__title">
-                                <h2 className="mdl-card__title-text">{this.props.news.title}</h2>
-                                <a className="news-card__title-link mdl-color-text--primary" href={this.props.news.link} target="_blank">{this.props.news.source}</a>
-                                <div className="mdl-layout-spacer"></div>
-                                <div className="news-card__ts mdl-color-text--grey-600">{this.props.news.ts}</div>
-                            </div>
-                            <div className={this.state.expanded ? 'mdl-card__supporting-text news-card__content--expanded' : 'mdl-card__supporting-text'}>
-                                <div className={!!this.props.news.pic ? 'news-card__image' : 'hidden'}>
-                                    <img src={this.props.news.pic} width="128"/>
-                                </div>
-                                <div className="news_card__details">{this.props.news.snippet}</div>
-                                <div className="news-card__links">
-                                    <a className="mdl-color-text--grey-700" href="" onClick={this.handleExpand.bind(this)}>
-                                        <i className="material-icons news-card__expand-icon" role="presentation">expand_more</i>    
-                                    </a>
-                                </div>
-                                <div className="news-card__content">
-                                   <div dangerouslySetInnerHTML={{__html: this.props.news.content}}/>
-                                </div>
-                            </div>
-                             <div className="news_card__actions mdl-card__actions mdl-card--border">
-                                <div>
-                                    <a className="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-                                        В гиковский выпуск
-                                    </a>
-                                    <a className="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-color-text--accent">
-                                        Сделать текущим
-                                    </a>
-                                </div>
-                                <div className="mdl-layout-spacer"></div>
-                                <div>
-                                    <button className="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon">
-                                        <i className="material-icons" role="presentation">arrow_upward</i>
-                                    </button>
-                                    <button className="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon">
-                                        <i className="material-icons" role="presentation">arrow_downward</i>
-                                    </button>
-                                    <button className="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon">
-                                        <i className="material-icons" role="presentation">delete</i>    
-                                    </button>                                    
-                                </div>
-                            </div>
-                        </div>
-                );
-            }
-        }
-
-        class News extends React.Component {  
-            
-            constructor(props) {
-                super(props);
-                this.state = {
-                    news: [],
-                    loading: true
-                }
-
-                superagent
-                    .get('http://master.radio-t.com:8778/api/v1/news')
-                    .end((err, res) => {
-                        console.log(res.body);
-
-                        const hostname = (url) => {
-                            const parser = document.createElement('a');
-                            parser.href = url;
-                            return parser.hostname;
-                        }     
-
-
-                        const news = res.body.map(n => {
-                            return {
-                                ...n,
-                                source: hostname(n.link)
-                            }
-                        });
-                        this.setState({news: news, loading: false})
-                    });
-
-            }
-
-            render() {
-                const news = this.state.news.map(n => <NewsCard news={n}/>);
-                return (
-                    <div className="mdl-grid">
-                        {this.state.loading ? <div className="mdl-cell mdl-cell--12-col"><div className="mdl-spinner mdl-js-spinner is-active"></div></div> : news }
-                    </div>
-                );
-            }
-        }
-
-        ReactDOM.render(<News/>, document.getElementById('news') );
-    </script>
+    <script src="./assets/vendor.bundle.js"></script>
+    <script src="./assets/bundle.js"></script>
 </body>
 </html>
