--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.indigo-pink.min.css"> -->
     <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.blue-pink.min.css">
 
-    <link rel="stylesheet" "text/css" href="./assets/styles/style.css">
+    <link rel="stylesheet" "text/css" href="http://renatn.github.io/radio-t-news/assets/styles/style.css">
 
 </head>
 <body class="app mdl-color--grey-100 mdl-color-text--grey-700 mdl-base">
@@ -63,7 +63,7 @@
     </div>
 
     <script src="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.min.js"></script>
-    <script src="./assets/vendor.bundle.js"></script>
-    <script src="./assets/bundle.js"></script>
+    <script src="http://renatn.github.io/radio-t-news/assets/vendor.bundle.js"></script>
+    <script src="http://renatn.github.io/radio-t-news/assets/bundle.js"></script>
 </body>
 </html>
