Geek, deleted news

--- a/index.html
+++ b/index.html
@@ -52,15 +52,13 @@
       </header>
       <main class="mdl-layout__content">
         <section class="mdl-layout__tab-panel is-active" id="news-tab">
-          <div class="app-layout" id="news">
-              
-          </div>
+          <div class="app-layout" id="news"></div>
         </section>
         <section class="mdl-layout__tab-panel" id="scroll-tab-2">
-          <div class="app-layout"><h2>В разработке...</h2></div>
+          <div class="app-layout" id="geekNews"></div>
         </section>
         <section class="mdl-layout__tab-panel" id="scroll-tab-3">
-          <div class="app-layout"><h3>В разработке...</h3></div>
+          <div class="app-layout" id="deletedNews"></div>
         </section>
         <section class="mdl-layout__tab-panel" id="scroll-tab-4">
           <div class="app-layout"><h4>В разработке...</h4></div>
