--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </main>
     </div>
 
-    <script src="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.min.js"></script>
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="http://renatn.github.io/radio-t-news/assets/vendor.bundle.js"></script>
     <script src="http://renatn.github.io/radio-t-news/assets/bundle.js"></script>
 </body>
